@@ -1,6 +1,7 @@
 package com.nexigroup.pagopa.cruscotto.job.kpi.b3;
 
 import com.nexigroup.pagopa.cruscotto.config.ApplicationProperties;
+import com.nexigroup.pagopa.cruscotto.domain.enumeration.EvaluationType;
 import com.nexigroup.pagopa.cruscotto.domain.enumeration.ModuleCode;
 import com.nexigroup.pagopa.cruscotto.domain.enumeration.OutcomeStatus;
 import com.nexigroup.pagopa.cruscotto.job.config.JobConstant;
@@ -21,7 +22,6 @@ import java.time.LocalDateTime;
 import java.time.ZoneId;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicReference;
-import java.util.stream.Collectors;
 import lombok.AllArgsConstructor;
 import org.springframework.lang.NonNull;
 import org.quartz.DisallowConcurrentExecution;
@@ -170,7 +170,7 @@ public class KpiB3Job extends QuartzJobBean {
                         // Create list of station codes for filtering
                         List<String> partnerStationCodes = partnerStations.stream()
                             .map(AnagStation::getName)
-                            .collect(Collectors.toList());
+                            .toList();
 
                         LOGGER.info("Partner {} has {} stations: {}",
                                    instanceDTO.getPartnerFiscalCode(), partnerStations.size(), partnerStationCodes);
@@ -189,7 +189,7 @@ public class KpiB3Job extends QuartzJobBean {
                         // Filter to include only events for partner stations
                         List<PagopaNumeroStandin> standInData = allStandInData.stream()
                             .filter(event -> partnerStationCodes.contains(event.getStationCode()))
-                            .collect(Collectors.toList());
+                            .toList();
 
                         LOGGER.info("Found {} total Stand-In records, {} for partner {} stations",
                                    allStandInData.size(), standInData.size(), instanceDTO.getPartnerFiscalCode());
@@ -208,6 +208,7 @@ public class KpiB3Job extends QuartzJobBean {
                         AtomicReference<OutcomeStatus> kpiB3ResultFinalOutcome = new AtomicReference<>(OutcomeStatus.OK);
 
                         OutcomeStatus outcome = calculateKpiB3Outcome(
+                            kpiConfigurationDTO.getEvaluationType(),
                             filteredStandInData,
                             eligibilityThreshold,
                             instanceDTO
@@ -370,6 +371,7 @@ public class KpiB3Job extends QuartzJobBean {
      * Calculates KPI B.3 outcome based on Stand-In data and configured threshold
      */
     private OutcomeStatus calculateKpiB3Outcome(
+        EvaluationType evaluationType,
             List<PagopaNumeroStandin> filteredStandInData,
             Double eligibilityThreshold,
             InstanceDTO instanceDTO) {
@@ -381,10 +383,19 @@ public class KpiB3Job extends QuartzJobBean {
                 return OutcomeStatus.OK;
             }
 
-            // Calculate total Stand-In events for all partner stations
             int totalStandInEvents = filteredStandInData.stream()
                 .mapToInt(PagopaNumeroStandin::getStandInCount)
                 .sum();
+
+            if (evaluationType.equals(EvaluationType.MESE)){
+                totalStandInEvents = filteredStandInData.stream()
+                    .mapToInt(PagopaNumeroStandin::getStandInCount)
+                    .max()
+                    .orElse(0);
+            }
+
+            // Calculate total Stand-In events for all partner stations
+
 
             LOGGER.info("Total Stand-In events for partner {} in period {} to {}: {}",
                        instanceDTO.getPartnerFiscalCode(),
